--- a/resources/templates/webpack/basic/package.json
+++ b/resources/templates/webpack/basic/package.json
@@ -5,9 +5,7 @@
   "private": "true",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
-    "lint": "eslint --ext .ts,.tsx,.js,.jsx .",
-    "lint:fix": "eslint --ext .ts,.tsx,.js,.jsx . --fix"
+    "build": "webpack"
   },
   "keywords": [],
   "author": "",
