--- a/resources/templates/eslint/.javascript-eslintrc.json
+++ b/resources/templates/eslint/.javascript-eslintrc.json
@@ -1,17 +1,17 @@
 {
     "env": {
         "browser": true,
-        "es2021": true
+        "es2021": true,
+        "node": true
     },
     "extends": [
         "eslint:recommended",
         "prettier"
     ],
-    "parser":"@typescript-eslint/parser",
     "parserOptions": {
         "ecmaVersion": "latest",
-        "sourceType": "module",
-        "project": "./tsconfig.json"
-    }
+        "sourceType": "module"
+    },
+    "ignorePatterns": ["node_modules/", "dist/", "webpack.config.js"]
 }
 
