--- a/resources/templates/webpack/basic/package.json
+++ b/resources/templates/webpack/basic/package.json
@@ -5,7 +5,9 @@
   "private": "true",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack",
+    "lint": "npx eslint --ext .ts,.tsx,.js,.jsx .",
+    "lint:fix": "npx eslint --ext .ts,.tsx,.js,.jsx . --fix"
   },
   "keywords": [],
   "author": "",
