--- a/dotfiles/alacritty/alacritty.yml
+++ b/dotfiles/alacritty/alacritty.yml
@@ -14,8 +14,9 @@ window:
 scrolling:
   history: 1000
   multiplier: 3
-
 font:
+  normal:
+    family: "MesloLGS NF"
   size: 12.5
 
 draw_bold_text_with_bright_colors: true
