--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -4,6 +4,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
 # set prefix
 # set to Alt + s
@@ -36,6 +37,10 @@ bind -n M-L next-window
 # restore neovim sessions
 # https://github.com/tmux-plugins/tmux-resurrect/blob/master/docs/restoring_vim_and_neovim_sessions.md
 set -g @resurrect-strategy-nvim "session"
+
+# last saved environent is automatically restored when tmux is started
+set -g @continuum-restore 'on'
+
 
 run '~/.tmux/plugins/tpm/tpm'
 
