--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -41,6 +41,7 @@ set -g @resurrect-strategy-nvim "session"
 # last saved environent is automatically restored when tmux is started
 set -g @continuum-restore 'on'
 
-
 run '~/.tmux/plugins/tpm/tpm'
+
+run-shell "nohup ~/common/scripts/tmux/persist-reboots.sh >/dev/null 2>&1 &"
 
