--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ dotfiles/mpd/state
 dotfiles/mpd/sticker.sql
 dotfiles/mpd/pid
 dotfiles/ncmpcpp/error.log
+dotfiles/lf/session-bookmarks
+scripts/yt-dlp/albumdl/dl-log.csv
 Session.vim
 
 
