Modify path to new path for persist-reboots.sh

--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -43,5 +43,6 @@ set -g @continuum-restore 'on'
 
 run '~/.tmux/plugins/tpm/tpm'
 
-run-shell "nohup ~/common/scripts/tmux/persist-reboots.sh >/dev/null 2>&1 &"
+run-shell "nohup $HOME/.config/tmux/scripts/persist-reboots.sh >/dev/null 2>&1 &"
+
 
