--- a/dotfiles/polybar/config.ini
+++ b/dotfiles/polybar/config.ini
@@ -1,11 +1,16 @@
+; https://github.com/polybar/polybar/wiki/
+
 [colors]
 background = #97282A2E
-background-alt = #373B41
-foreground = #f1f0ff
-primary = #adffff
+background-alt = #95000000
+foreground = #e1f5f5
+primary =#95e8e8e8
 secondary = #8ABEB7
 alert = #A54242
 disabled = #abb0b5
+
+[fonts]
+main = "JetBrainsMono NF:style=regular;2"
 
 [bar/main]
 monitor = eDP-1
@@ -13,7 +18,6 @@ width = 100%
 height = 25pt
 radius = 10
 background = ${colors.background}
-# background = #
 foreground = ${colors.foreground}
 line-size = 3pt
 border-size = 4pt
@@ -23,9 +27,9 @@ padding-right = 1
 module-margin = 1
 separator = |
 separator-foreground = ${colors.foreground}
-font-0 = monospace;2
-modules-left = i3 xworkspaces xwindow
-modules-right = mpd pulseaudio wlan date
+font-0 = ${fonts.main}
+modules-left = i3 xwindow
+modules-right = mpd pulseaudio memory wlan battery date
 cursor-click = pointer
 cursor-scroll = ns-resize
 enable-ipc = true
@@ -45,19 +49,12 @@ padding-right = 1
 module-margin = 1
 separator = |
 separator-foreground = ${colors.foreground}
-font-0 = monospace;2
+font-0 = ${fonts.main}
 modules-left = i3 xwindow
-modules-right = mpd pulseaudio wlan date
+modules-right = mpd pulseaudio memory wlan battery date
 cursor-click = pointer
 cursor-scroll = ns-resize
 enable-ipc = true
-
-
-[module/systray]
-type = internal/tray
-
-format-margin = 8pt
-tray-spacing = 16pt
 
 [module/i3]
 type = internal/i3
@@ -74,16 +71,17 @@ label-occupied-padding = 1
 
 label-focused = %name%
 label-focused-background = ${colors.background-alt}
-label-focused-underline= ${colors.primary}
+label-focused-underline = ${colors.primary}
 label-focused-padding = 1
-
-label-unfocused = %name%
-label-unfocused-padding = 1
 
 label-visible = %name%
 label-visible-background = ${colors.background-alt}
-label-visible-underline= ${colors.primary}
+label-visible-underline = ${colors.primary}
 label-visible-padding = 1
+
+label-unfocused = %name%
+label-unfocuseed-background = ${colors.alert}
+label-unfocused-padding = 1
 
 label-urgent = %name%
 label-urgent-background = ${colors.alert}
@@ -95,98 +93,92 @@ label-empty-padding = 1
 
 [module/mpd]
 type = internal/mpd
-
-; Host where mpd is running (either ip or domain name)
-; Can also be the full path to a unix socket where mpd is running.
 host = 127.0.0.1
 port = 6600
-
-; Seconds to sleep between progressbar/song timer sync
-; Default: 1
 interval = 2
+
+format-online = <label-song>
+label-song = "%{A1: mpc toggle &:}󰝚  %artist% - %title%%{A}"
+
+format-offline = <label-offline>
+label-offline = "%{A1: mpd &:}󰝛 mpd%{A}"
 
 [module/xwindow]
 type = internal/xwindow
-label = %title:0:60:...%
-
-[module/filesystem]
-type = internal/fs
-interval = 25
-
-mount-0 = /
-
-label-mounted = %{F#F0C674}%mountpoint%%{F-} %percentage_used%%
-
-label-unmounted = %mountpoint% not mounted
-label-unmounted-foreground = ${colors.disabled}
+format = <label>
+format-padding = 4
+format-foreground = ${colors.foreground}
+format-background = #95000000
+label = %title:0:30:...%
 
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume-prefix = "VOL "
+interval = 2
 format-volume-prefix-foreground = ${colors.foreground}
 format-volume = <label-volume>
 
-label-volume = %percentage%%
+label-volume = "󰕾 %percentage%"
 
-label-muted = muted
+label-muted = "󰝟 mute"
 label-muted-foreground = ${colors.disabled}
-
-[module/xkeyboard]
-type = internal/xkeyboard
-blacklist-0 = num lock
-
-label-layout = %layout%
-label-layout-foreground = ${colors.primary}
-
-label-indicator-padding = 2
-label-indicator-margin = 1
-label-indicator-foreground = ${colors.background}
-label-indicator-background = ${colors.secondary}
+click-right = pavucontrol &
 
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = "RAM "
-format-prefix-foreground = ${colors.primary}
-label = %percentage_used:2%%
-
-[module/cpu]
-type = internal/cpu
-interval = 2
-format-prefix = "CPU "
-format-prefix-foreground = ${colors.primary}
-label = %percentage:2%%
-
-[network-base]
-type = internal/network
-interval = 5
-format-connected = <label-connected>
-format-disconnected = <label-disconnected>
-label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
-
-[module/wlan]
-inherit = network-base
-interface-type = wireless
-label-connected = %{F#ffffff }%ifname%%{F-} %essid%
-
-[module/eth]
-inherit = network-base
-interface-type = wired
-label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
+format-prefix-foreground = ${colors.foreground}
+label = "%{A1:alacritty -e htop &:}󰍛 %percentage_used:2%%{A}"
+; label = "%{A1:alacritty -e htop &:}%{F#99ff99}󰍛%{F-} %percentage_used:2%%{A}"
 
 [module/date]
 type = internal/date
 interval = 1
 
 date = %H:%M
-date-alt = %Y-%m-%d %H:%M:%S
+date-alt = %m/%d/%y %H:%M:%S
 
 label = %date%
 label-foreground = ${colors.foreground}
+
+[module/battery]
+type = internal/battery
+full-at = 95
+low-at = 5
+battery = BAT0
+
+format-charging = <label-charging>
+label-charging = "󰂄 %percentage%"
+label-full = "󰁹 %percentage%"
+
+
+format-discharging = <ramp-capacity> <label-discharging>
+label-discharging = %percentage%
+ramp-capacity-0 = %{F${colors.alert}}󰂎%{F-}
+ramp-capacity-1 = 󰁼
+ramp-capacity-2 = 󰁾
+ramp-capacity-3 = 󰂀
+ramp-capacity-4 = 󰁹
+
+
+[network-base]
+type = internal/network
+interval = 5
+format-connected = <label-connected>
+format-disconnected = <label-disconnected>
+label-disconnected = "%{A1:alacritty -e nmtui &:}󰖪 disconnected%{A}"
+
+[module/wlan]
+inherit = network-base
+interface-type = wireless
+label-connected = "%{A1:alacritty -e nmtui &:}󰖩 %signal%%{A}"
+
+[module/eth]
+inherit = network-base
+interface-type = wired
+label-connected = "%{A1:alacritty -e nmtui &:}󰖩 %signal%%{A}"
 
 [settings]
 screenchange-reload = true
 pseudo-transparency = true
 
-; vim:ft=dosini
