--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -1,4 +1,3 @@
-# plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'catppuccin/tmux'
@@ -6,32 +5,33 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 
-# set prefix
-# set to Alt + s
+# PREFIX
 unbind C-b
-set -g prefix M-s
-bind M-s send-prefix
+set -g prefix F1
+bind F1 send-prefix
 
-# enable mouse
+# SETTINGS
 set -g mouse on
-
 set -g default-terminal "tmux-256color"
-
-# set true color
+# true color
 set-option -sa terminal-overrides ",xterm*:Tc"
-
 # start windows and panes at 1, not 0
 set -g base-index 1
 set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
-# Open panes in current directory
-bind '"' split-window -v -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
-
-bind -n M-H previous-window
-bind -n M-L next-window
+# BIND-KEY
+bind-key h previous-window
+bind-key l next-window
+bind-key j choose-tree -Zs \; send-keys /
+bind-key k choose-tree -Zs
+bind-key n new-window
+bind-key BSpace kill-window
+bind-key BSpace kill-pane
+bind s split-window -h -c "#{pane_current_path}"
+bind S split-window -v -c "#{pane_current_path}"
+bind-key m switch-client -t "music"
 
 ### tmux-resurrect
 # restore neovim sessions
@@ -43,6 +43,5 @@ set -g @continuum-restore 'on'
 
 run '~/.tmux/plugins/tpm/tpm'
 
+# saves tmux environment every 15 minutes
 run-shell "nohup $HOME/.config/tmux/scripts/persist-reboots.sh >/dev/null 2>&1 &"
-
-
