--- a/dotfiles/polybar/config.ini
+++ b/dotfiles/polybar/config.ini
@@ -1,13 +1,7 @@
 ; https://github.com/polybar/polybar/wiki/
 
-[colors]
-background = #97282A2E
-background-alt = #95000000
-foreground = #e1f5f5
-primary =#95e8e8e8
-secondary = #8ABEB7
-alert = #A54242
-disabled = #abb0b5
+; colorscheme
+include-file = /home/max/.config/polybar/colors/transparent-mono-dark.ini
 
 [fonts]
 main = "JetBrainsMono NF:style=regular;2"
@@ -16,7 +10,7 @@ main = "JetBrainsMono NF:style=regular;2"
 monitor = eDP-1
 width = 100%
 height = 25pt
-radius = 10
+radius = 5
 background = ${colors.background}
 foreground = ${colors.foreground}
 line-size = 3pt
@@ -29,7 +23,8 @@ separator = |
 separator-foreground = ${colors.foreground}
 font-0 = ${fonts.main}
 modules-left = i3 xwindow
-modules-right = mpd pulseaudio memory wlan battery date
+modules-center = mpd
+modules-right = pulseaudio memory wlan battery date
 cursor-click = pointer
 cursor-scroll = ns-resize
 enable-ipc = true
@@ -38,7 +33,7 @@ enable-ipc = true
 monitor = HDMI-1-0
 width = 100%
 height = 25pt
-radius = 10
+radius = 5
 background = ${colors.background}
 foreground = ${colors.foreground}
 line-size = 3pt
@@ -51,7 +46,31 @@ separator = |
 separator-foreground = ${colors.foreground}
 font-0 = ${fonts.main}
 modules-left = i3 xwindow
-modules-right = mpd pulseaudio memory wlan battery date
+modules-center = mpd
+modules-right = pulseaudio memory wlan battery date
+cursor-click = pointer
+cursor-scroll = ns-resize
+enable-ipc = true
+
+[bar/external2]
+monitor = DP-1-0
+width = 100%
+height = 25pt
+radius = 5
+background = ${colors.background}
+foreground = ${colors.foreground}
+line-size = 3pt
+border-size = 4pt
+border-color = #00000000
+padding-left = 0
+padding-right = 1
+module-margin = 1
+separator = |
+separator-foreground = ${colors.foreground}
+font-0 = ${fonts.main}
+modules-left = i3 xwindow
+modules-center = mpd
+modules-right = pulseaudio memory wlan battery date
 cursor-click = pointer
 cursor-scroll = ns-resize
 enable-ipc = true
@@ -64,6 +83,8 @@ format = <label-state> <label-mode>
 
 label-mode = %mode%
 label-mode-padding = 1
+# label-mode-foreground = ${colors.foreground}
+label-mode-foreground = white
 label-mode-background = ${colors.alert}
 
 label-occupied = %name%
@@ -71,16 +92,16 @@ label-occupied-padding = 1
 
 label-focused = %name%
 label-focused-background = ${colors.background-alt}
-label-focused-underline = ${colors.primary}
+label-focused-underline = ${colors.foreground}
 label-focused-padding = 1
 
 label-visible = %name%
 label-visible-background = ${colors.background-alt}
-label-visible-underline = ${colors.primary}
+label-visible-underline = ${colors.foreground}
 label-visible-padding = 1
 
 label-unfocused = %name%
-label-unfocuseed-background = ${colors.alert}
+# label-unfocused-background = ${colors.???}
 label-unfocused-padding = 1
 
 label-urgent = %name%
@@ -103,19 +124,20 @@ label-song = "%{A1: mpc toggle &:}󰝚  %artist% - %title%%{A}"
 format-offline = <label-offline>
 label-offline = "%{A1: mpd &:}󰝛 mpd%{A}"
 
+
 [module/xwindow]
 type = internal/xwindow
 format = <label>
 format-padding = 4
 format-foreground = ${colors.foreground}
-format-background = #95000000
+format-background = ${colors.background-alt}
 label = %title:0:30:...%
 
 [module/pulseaudio]
 type = internal/pulseaudio
 
 interval = 2
-format-volume-prefix-foreground = ${colors.foreground}
+# format-volume-prefix-foreground = ${colors.foreground}
 format-volume = <label-volume>
 
 label-volume = "󰕾 %percentage%"
@@ -127,19 +149,19 @@ click-right = pavucontrol &
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix-foreground = ${colors.foreground}
-label = "%{A1:alacritty -e htop &:}󰍛 %percentage_used:2%%{A}"
-; label = "%{A1:alacritty -e htop &:}%{F#99ff99}󰍛%{F-} %percentage_used:2%%{A}"
+format-prefix-foreground = #00e600
+label = "%{A1:alacritty -e vtop &:}󰍛 %percentage_used:2%%{A}"
+# label = "%{A1:alacritty -e htop &:}%{F#b8bb26}󰍛%{F-} %percentage_used:2%%{A}"
 
 [module/date]
 type = internal/date
 interval = 1
 
-date = %H:%M
-date-alt = %m/%d/%y %H:%M:%S
+date = %I:%M %p
+date-alt = %m/%d/%y %I:%M %p
 
 label = %date%
-label-foreground = ${colors.foreground}
+# label-foreground = ${colors.foreground}
 
 [module/battery]
 type = internal/battery
@@ -154,7 +176,7 @@ label-full = "󰁹 %percentage%"
 
 format-discharging = <ramp-capacity> <label-discharging>
 label-discharging = %percentage%
-ramp-capacity-0 = %{F${colors.alert}}󰂎%{F-}
+ramp-capacity-0 = 󰂎
 ramp-capacity-1 = 󰁼
 ramp-capacity-2 = 󰁾
 ramp-capacity-3 = 󰂀
