--- a/scripts/express/template/package.json
+++ b/scripts/express/template/package.json
@@ -3,8 +3,10 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
-        "build": "npx webpack && tsc && node ./dist/index.js",
-        "start:server": "tsc && node ./dist/index.js"
+        "build": "npx webpack && tsc",
+        "compile": "tsc",
+        "start:server": "npm run build && node ./dist/index.js",
+        "start:dev": "nodemon ./src/index.ts"
     },
     "keywords": [],
     "author": "",
@@ -20,7 +22,6 @@
         "@types/express": "latest",
         "@types/node": "latest",
         "babel-loader": "latest",
-        "browser-sync-webpack-plugin": "latest",
         "css-loader": "latest",
         "dotenv": "latest",
         "nodemon": "latest",
@@ -29,6 +30,7 @@
         "sass-loader": "latest",
         "style-loader": "latest",
         "ts-loader": "latest",
+        "ts-node": "latest",
         "typescript": "latest",
         "webpack": "latest",
         "webpack-cli": "latest"
