--- a/scripts/express/template/tsconfig.json
+++ b/scripts/express/template/tsconfig.json
@@ -71,6 +71,6 @@
         // },
         "useUnknownInCatchVariables": false
     },
-    "include": ["src/**/*.ts", "spec/**/*.ts", "build.ts"],
-    "exclude": ["src/public/"]
+    "include": ["src/**/*.ts", "spec/**/*.ts", "build.ts"]
+    // "exclude": ["src/public/"]
 }
