--- a/scripts/setup-webpack/template/package.json
+++ b/scripts/setup-webpack/template/package.json
@@ -1,40 +1,29 @@
 {
-    "name": "express-template",
+    "name": "setup-webpack",
     "version": "1.0.0",
+    "description": "",
     "main": "index.js",
     "scripts": {
-        "build": "npx webpack && tsc",
-        "compile": "tsc",
-        "start:server": "npm run build && node ./dist/index.js",
-        "start:dev": "nodemon ./src/index.ts"
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
-    "description": "",
-    "dependencies": {
-        "ejs": "latest",
-        "express": "latest",
-        "helmet": "latest"
-    },
     "devDependencies": {
-        "@babel/core": "latest",
-        "@babel/preset-env": "latest",
         "@eslint/js": "latest",
-        "@types/express": "latest",
-        "@types/node": "latest",
+        "@types/eslint__js": "latest",
         "babel-loader": "latest",
+        "browser-sync-webpack-plugin": "latest",
         "css-loader": "latest",
-        "dotenv": "latest",
         "eslint": "latest",
         "globals": "latest",
-        "nodemon": "latest",
         "prettier": "latest",
         "sass": "latest",
         "sass-loader": "latest",
         "style-loader": "latest",
+        "stylelint": "latest",
+        "stylelint-scss": "latest",
         "ts-loader": "latest",
-        "ts-node": "latest",
         "typescript": "latest",
         "typescript-eslint": "latest",
         "webpack": "latest",
