--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -12,7 +12,7 @@ bind F1 send-prefix
 
 # SETTINGS
 set -g mouse on
-set -g default-terminal "tmux-256color"
+set -g default-terminal "xterm-kitty"
 # true color
 set-option -sa terminal-overrides ",xterm*:Tc"
 # start windows and panes at 1, not 0
