--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -22,10 +22,10 @@ set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
 # BIND-KEY
-bind-key h previous-window
-bind-key l next-window
-bind-key j choose-tree -Zs \; send-keys /
-bind-key k choose-tree -Zs
+bind-key j previous-window
+bind-key k next-window
+bind-key o choose-tree -Zs
+bind-key Space choose-tree -Zs \; send-keys /
 bind-key n new-window
 bind-key BSpace kill-window
 bind-key BSpace kill-pane
