--- a/dotfiles/polybar/config.ini
+++ b/dotfiles/polybar/config.ini
@@ -119,6 +119,7 @@ port = 6600
 interval = 2
 
 format-online = <label-song>
+; label-song = "%{A1: mpc toggle &:}󰝚  %artist% - %title:0:55%%{A}"
 label-song = "%{A1: mpc toggle &:}󰝚  %artist% - %title%%{A}"
 
 format-offline = <label-offline>
