--- a/dotfiles/picom/picom.conf
+++ b/dotfiles/picom/picom.conf
@@ -1,7 +1,9 @@
 backend = "glx"
 fading = false;
 
+# xprop command to find window class
 opacity-rule = [
-    "75:class_g = 'Zathura'",
-    "83:class_g = 'Code'"
+    "87:class_g = 'Zathura'",
+    "87:class_g = 'Code'",
+    "87:class_g = 'kitty'"
 ];
